--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+:root {
+  --background-color-lightgray: #f2f2f2;
+  --background-color-darkgray: #1f1f1f;
+  --text-color-black: #000000;
+  --secondary-color-blue: #2f80ed;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -7,6 +14,7 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  border: 1px solid var(--text-color-black);
 }
 
 .header {
@@ -20,6 +28,7 @@
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: var(--secondary-color-blue);
 }
 
 /* и элемента с модификатором вида ключ-значение */
