Finish header section

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,14 +14,57 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  border: 1px solid var(--text-color-black);
+  outline: 1px solid var(--text-color-black);
 }
 
+/* Стили для блока Header*/
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: var(--background-color-lightgray);
+  display: flex;
+  align-items: center;
+  position: relative;
   /* выше установили ограничения для секции */
+}
+
+.header__logo {
+  width: 228px;
+  height: 32px;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  width: 730px;
+  margin: 0 0 0 64px;
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  width: 388px;
+  margin: 0;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  z-index: 3;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -29,6 +72,10 @@
   height: 568px;
   width: 568px;
   background-color: var(--secondary-color-blue);
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
