--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
 }
 
 /* Стили для блока Header*/
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -76,6 +77,19 @@
   top: 64px;
   right: 0;
   z-index: 1;
+}
+
+/* Стили для блока description*/
+
+.description {
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+}
+
+.two-columns {
+  margin: 100px;
+  width: 80%;
 }
 
 /* и элемента с модификатором вида ключ-значение */
