--- a/styles/style.css
+++ b/styles/style.css
@@ -131,9 +131,8 @@
 /* Стили для блока digits*/
 
 
-.section-title__digits {
+.section-title {
   width: 60%;
-  margin: 100px auto 20px;
   font-size: 60px;
   font-weight: 600;
   color: var(--text-color-black);
@@ -141,15 +140,18 @@
   line-height: 1.15;
   outline: 1px solid var(--text-color-black);
 }
+.section-title__digits {
+  margin: 100px auto 20px;
+}
 
-.section-subtitle__digits {
+.section-subtitle {
   width: 60%;
+  margin: auto;
   font-size: 24px;
   font-weight: normal;
   color: var(--text-color-black);
   text-align: center;
   line-height: 34px;
-  margin: auto;
   outline: 1px solid var(--text-color-black);
 }
 
@@ -245,10 +247,74 @@
 }
 
 
-/* и элемента с модификатором вида ключ-значение */
+/* Стили для блока kaufman */
+
+
+.section-title__kaufman {
+  margin: 90px auto 20px;
+  z-index: 1;
+}
+
+.table__kaufman {
+  margin: 0 auto 90px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  outline: 1px solid white;
+}
+
+.kaufman_theme_dark {
+  background-color: var(--text-color-black);
+  position: relative;
+  overflow: hidden;
+  outline: 1px solid white;
+}
+
+.section-title_theme_dark {
+  color: white;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
+.table_theme_dark {
+  color: white;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
+.table__heading_theme_dark {
+  color: white;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
+.table__text_theme_dark {
+  color: white;
+  z-index: 1;
+  outline: 1px solid white;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
 }
