--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
   margin: 0 0 0 64px;
   font-size: 102px;
   color: var(--text-color-black);
@@ -54,7 +54,7 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   margin: 0;
   position: absolute;
   bottom: 30px;
@@ -64,6 +64,11 @@
   font-weight: normal;
   line-height: 25px;
   z-index: 3;
+}
+
+.header__link {
+  text-decoration: none;
+  color: var(--secondary-color-blue);
 }
 
 .header__main-illustration {
@@ -98,7 +103,7 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
   margin: 0;
   font-size: 18px;
   font-weight: normal;
@@ -138,6 +143,7 @@
   color: var(--text-color-black);
   text-align: center;
   line-height: 1.15;
+  z-index: 3;
 }
 
 .digits__section-title {
@@ -157,17 +163,22 @@
   margin: auto;
 }
 
-.digits__table {
-  margin: 0 auto 100px;
+.table {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 1100px;
+  padding: 0;
+}
+
+.digits__table {
+  margin: 0 auto 100px;
 }
 
 .table__cell {
   width: 250px;
   margin: 60px 0 0;
+  list-style: none;
 }
 
 .table__heading {
@@ -193,7 +204,11 @@
 .feynman {
   width: 100%;
   background-color: var(--background-color-lightgray);
-  height: 890px;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  min-height: 890px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -202,13 +217,12 @@
 
 .feynman__title {
   margin: 100px 0 0;
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   font-size: 120px;
   font-weight: 600;
   color: var(--text-color-black);
   line-height: 1.15;
-  z-index: 1;
 }
 
 .feynman__subtitle {
@@ -217,7 +231,6 @@
   font-weight: normal;
   color: var(--text-color-black);
   line-height: 51px;
-  z-index: 1;
 }
 
 .feynman__link {
@@ -229,54 +242,31 @@
   top: 50%;
   right: 48px;
   text-decoration: none;
-  z-index: 1;
-}
-
-.feynman__illustration {
-  width: 867px;
-  height: 637px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 0;
 }
 
 
 /* Стили для блока kaufman */
 
 
+.kaufman {
+  background-color: var(--background-color-darkgray);
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: 877px 877px;
+  background-position: top right -210px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
 .kaufman__section-title {
   margin: 90px auto 20px;
-  z-index: 1;
 }
 
 .kaufman__section-subtitle {
   margin: auto;
-  z-index: 1;
 }
 
 .kaufman__table {
   margin: 0 auto 90px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 1100px;
-  z-index: 1;
-}
-
-.kaufman__triangle {
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  top: 0;
-  right: -210px;
-  z-index: 0;
-}
-
-.kaufman_theme_dark {
-  background-color: var(--text-color-black);
-  position: relative;
-  overflow: hidden;
 }
 
 .section-title_theme_dark {
@@ -296,17 +286,14 @@
   color: var(--text-color-theme-dark);
   margin-right: 0;
   margin-top: 80px;
-  z-index: 1;
 }
 
 .table__heading_theme_dark {
   color: var(--text-color-theme-dark);
-  z-index: 1;
 }
 
 .table__text_theme_dark {
   color: var(--text-color-theme-dark);
-  z-index: 1;
 }
 
 
@@ -314,7 +301,7 @@
 
 
 .footer {
-  background-color: var(--text-color-black);
+  background-color: var(--background-color-darkgray);
   padding: 60px 0 40px;
 }
 
@@ -324,7 +311,6 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  background-color: var(--text-color-black);
 }
 
 .footer__column_content_copyright {
@@ -356,7 +342,7 @@
   list-style: none;
 }
 
-.footer__column-link > a {
+.footer__column-link {
   color: var(--text-color-theme-dark);
   font-size: 18px;
   font-weight: normal;
@@ -364,7 +350,7 @@
   text-decoration: none;
 }
 
-.social__icon {
+.footer__social-icon {
   width: 16px;
   height: 16px;
   padding: 0 10px 0 0;
