--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,16 @@
 @import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
 @import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+@import url(../blocks/page/__techniques/page__techniques.css);
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/techniques/__section-title/techniques__section-title.css);
+@import url(../blocks/techniques/__section-subtitle/techniques__section-subtitle.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/techniques/__cards/techniques__cards.css);
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/digits/__section-title/digits__section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
