--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,11 @@
 @import url(../blocks/oakley/oakley.css);
 @import url(../blocks/oakley/__two-columns/oakley__two-columns.css);
 
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/__subtitle/feynman_subtitle.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+
 @import url(../blocks/digits/__section-title/digits__section-title.css);
 @import url(../blocks/digits/__section-subtitle/digits__section-subtitle.css);
 @import url(../blocks/table/table.css);
@@ -45,10 +50,16 @@
 @import url(../blocks/table/__heading/table__heading.css);
 @import url(../blocks/table/__text/table__text.css);
 
-@import url(../blocks/feynman/feynman.css);
-@import url(../blocks/feynman/__title/feynman__title.css);
-@import url(../blocks/feynman/__subtitle/feynman_subtitle.css);
-@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote-quthor-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
 
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__section-title/kaufman__section-title.css);
