--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,8 +1,11 @@
 .kaufman {
   background-color: var(--background-color-darkgray);
-  background-image: url(../images/kaufman-triangle.svg);
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  /* background-image: url(/images/kaufman-triangle.svg);
   background-size: 877px 877px;
   background-position: top right -210px;
   background-repeat: no-repeat;
-  overflow: hidden;
+  animation: rotation 20s linear infinite; */
 }
