--- a/pages/index.css
+++ b/pages/index.css
@@ -64,6 +64,7 @@
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__section-title/kaufman__section-title.css);
 @import url(../blocks/kaufman/__section-subtitle/kaufman__section-subtitle.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 @import url(../blocks/kaufman/__table/kaufman__table.css);
 @import url(../blocks/section-title/_theme_dark/section-title_theme_dark.css);
 @import url(../blocks/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
