--- a/pages/index.css
+++ b/pages/index.css
@@ -73,6 +73,12 @@
 @import url(../blocks/table/__heading/_theme_dark/table__heading_theme_dark.css);
 @import url(../blocks/table/__text/_theme_dark/table__text_theme_dark.css);
 
+@import url(../blocks/resources/__section-title/resources__section-title.css);
+@import url(../blocks/resources/__section-subtitle/resources__section-subtitle.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/__link/resources__link.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
 @import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
