add hover for links

--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -4,4 +4,10 @@
   font-weight: normal;
   line-height: 30px;
   text-decoration: none;
+  opacity: 1;
+}
+
+.footer__column-link:hover {
+  opacity: .3;
+  transition: opacity 1s;
 }
