--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -7,4 +7,10 @@
   top: 50%;
   right: 48px;
   text-decoration: none;
+  opacity: 1;
+}
+
+.feynman__link:hover {
+  opacity: .3;
+  transition: opacity 1s;
 }
