--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,10 @@
 .header__link {
   text-decoration: none;
   color: var(--secondary-color-blue);
-} 
+  opacity: 1;
+}
+
+.header__link:hover {
+  opacity: .3;
+  transition: opacity 1s;
+}
