--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -2,4 +2,10 @@
     width: 270px;
     height: 38px;
     text-decoration: none;
+    opacity: 1;
+}
+
+.resources__link:hover {
+    opacity: .3;
+    transition: opacity 1s;
 }
