--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,7 @@
 .feynman {
   width: 100%;
   background-color: var(--background-color-lightgray);
-  background-image: url(./images/feynman.png);
+  background-image: url(../images/feynman.png);
   background-size: 867px 637px;
   background-position: bottom left;
   background-repeat: no-repeat;
