--- a/blocks/feynman/__subtitle/feynman_subtitle.css
+++ b/blocks/feynman/__subtitle/feynman_subtitle.css
@@ -1,7 +1,10 @@
 .feynman__subtitle {
-  margin: 70px 0 0;
+  margin: 70px auto 0;
+  text-align: center;
   font-size: 36px;
   font-weight: normal;
   color: var(--text-color-black);
   line-height: 51px;
+  position: relative;
+  z-index: 2;
 }
