--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,9 +1,12 @@
 .feynman__title {
-  margin: 100px 0 0;
+  margin: 0 auto;
+  padding: 100px 0 0;
   max-width: 648px;
   text-align: center;
   font-size: 120px;
   font-weight: 600;
   color: var(--text-color-black);
   line-height: 1.15;
+  position: relative;
+  z-index: 2;
 }
