--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,13 +1,14 @@
 .feynman {
   width: 100%;
+  min-height: 890px;
   background-color: var(--background-color-lightgray);
-  background-image: url(/images/feynman.png);
+  /* background-image: url(/images/feynman.png);
   background-size: 867px 637px;
   background-position: bottom left;
   background-repeat: no-repeat;
-  min-height: 890px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   position: relative;
+  z-index: 0;
 }
