--- a/pages/index.css
+++ b/pages/index.css
@@ -47,6 +47,7 @@
 @import url(../blocks/feynman/__title/feynman__title.css);
 @import url(../blocks/feynman/__subtitle/feynman_subtitle.css);
 @import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__image/feynman__image.css);
 
 @import url(../blocks/digits/__section-title/digits__section-title.css);
 @import url(../blocks/digits/__section-subtitle/digits__section-subtitle.css);
