--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,9 +1,13 @@
 .kaufman__triangle {
+    margin: 0;
     width: 877px;
     height: 877px;
     position: absolute;
     top: 0;
     right: -210px;
-    z-index: 0;
+    background-image: url(/images/kaufman-triangle.svg);
+    background-size: 877px 877px;
+    background-repeat: no-repeat;
+    background-position: center;
     animation: rotation 20s linear infinite;
 }
