--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,8 @@
+@import url(./variables.css);
+
 @import url(../blocks/page/page.css);
-@import url(../blocks/page/__techniques/page__techniques.css);
+
+@import url(../blocks/content/__techniques/content__techniques.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -64,7 +67,7 @@
 @import url(../blocks/khan/__title/khan__title.css);
 @import url(../blocks/khan/__quote/khan__quote.css);
 @import url(../blocks/khan/__quote-author/khan__quote-author.css);
-@import url(../blocks/khan/__quote-quthor-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
 @import url(../blocks/khan/__book-container/khan__book-container.css);
 @import url(../blocks/khan/__book-pic/khan__book-pic.css);
 @import url(../blocks/khan/__buy-link/khan__buy-link.css);
@@ -75,12 +78,12 @@
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 @import url(../blocks/kaufman/__table/kaufman__table.css);
 
-@import url(../blocks/section-title/_theme_dark/section-title_theme_dark.css);
-@import url(../blocks/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
-@import url(../blocks/table/_theme_dark/table_theme_dark.css);
-@import url(../blocks/table/__cell/_theme_dark/table__cell_theme_dark.css);
-@import url(../blocks/table/__heading/_theme_dark/table__heading_theme_dark.css);
-@import url(../blocks/table/__text/_theme_dark/table__text_theme_dark.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
+@import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
 
 @import url(../blocks/resources/__section-title/resources__section-title.css);
 @import url(../blocks/resources/__section-subtitle/resources__section-subtitle.css);
@@ -96,11 +99,3 @@
 @import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
-
-:root {
-  --background-color-lightgray: #f2f2f2;
-  --background-color-darkgray: #1f1f1f;
-  --text-color-black: #000;
-  --secondary-color-blue: #2f80ed;
-  --text-color-theme-dark: #fff;
-}
